# cs121-whales

./: .dir-locals.el  .gitattributes  .gitignore  .lintstagedrc  .vendor_urls  Dockerfile  LICENSE.md  LINT.md  Makefile  Pipfile  Procfile  README.md  STYLE.md  app.json  index.html  pyproject.toml
UI/: chess.html
UI/js/: mychess.js
app/: api.py  models.py  server.py
app/html/: about.html  new-game.html  play.html
app/minimax_ab/: minimax.py
app/neural_net/: data_conversion.py  interface.py  neural_net.py  neural_net_interface.py  test_neural_net.py
app/static/css/: new-game.css  play.css  shared.css
app/static/js/: new-game.js  play-controller.js  play-model.js  play-view.js  util.js
backend/: Pipfile  api.py  data_conversion.py  models.py  neural_net.py  server.py
backend/html/: new-game.html  new_game.html  play.html
backend/minimax_ab/: minimax.py
backend/static/: index.html  play.html
backend/static/css/: new-game.css
backend/templates/: chess.html
backend/util/: chess.py
doc/: api-spec.md
doc/notes/: api-feature-research.md  api-proposal.md  minimax-timeout-notes.md  neural-network-notes.md
minimax-ab/: minimax.py
scripts/: build_tarball.sh  pre-commit  vendorbinaries.sh
whales/: api.py  models.py  server.py
whales/html/: about.html  new-game.html  play.html
whales/minimax_ab/: minimax.py
whales/neural_net/: chess_alpha_data.py  chess_alpha_zero.h5  chess_alpha_zero.json  chess_alpha_zero.onnx  data_conversion.py  interface.py  model 1.h5  model 1.json  test_neural_net.py
whales/util/: __init__.py  chess.py
(+16 files in other folders)
